--- a/styles/main.css
+++ b/styles/main.css
@@ -113,4 +113,62 @@ nav{
     height: 999px;
     padding-top: 1px;
     background-color: darkgoldenrod;
+    margin: 40px;
+}
+.page2>article{
+    width: 780px;
+    height: 370px;
+    margin: 20px 0 20px 20px;
+}
+.page2>article>article{
+    width: 370px;
+    height: 370px;
+    margin: 0 16px 0 0;
+    background-color: black;
+    display: inline-block;
+}
+.page2>article>article>article{
+    width: 370px;
+    height: 185px;
+    margin: 0;
+}
+.page2>article>article>article>section{
+    width: 185px;
+    height: 185px;
+    margin: 0 -4px 0 0;
+    background-color: white;
+    display: inline-block;
+    border-radius: 50%;
+}
+.page2>div{
+    width: 520px;
+    height: 300px;
+    margin: 20px 140px;
+    background-color: black;
+}
+.page2>div>section{
+    width: 255px;
+    height: 255px;
+    margin: 22.5px 1px;
+    background-color: white;
+    display: inline-block;
+    border-radius: 50%;
+}
+.page2>aside{
+    width: fit-content;
+    height: 250px;
+    margin: 20px auto;
+}
+.page2>aside>aside{
+    width: 555px;
+    height: 250px;
+    margin: 0;
+    display: inline-block;
+}
+.page2>aside>nav{
+    width: 205px;
+    height: 250px;
+    margin: 0 20px 0 0;
+    display: inline-block;
+    background-color: black;
 }
