--- a/styles/main.css
+++ b/styles/main.css
@@ -157,7 +157,7 @@ nav{
 .page2>aside{
     width: fit-content;
     height: 250px;
-    margin: 20px auto;
+    margin: 20px 0 20px 16px;
 }
 .page2>aside>aside{
     width: 555px;
@@ -165,10 +165,39 @@ nav{
     margin: 0;
     display: inline-block;
 }
+.page2>aside>aside>div{
+    width: 165px;
+    height: 250px;
+    margin: 0 16px 0 0;
+    background-color: black;
+    display: inline-block;
+}
+.page2>aside>aside>div>section{
+    width: 155px;
+    height: 240px;
+    margin: 5px;
+    background-color: white;
+    border-radius: 50%;
+}
 .page2>aside>nav{
     width: 205px;
     height: 250px;
     margin: 0 20px 0 0;
     display: inline-block;
     background-color: black;
+    vertical-align: top;
 }
+.page2>aside>nav>div{
+    width: 205px;
+    height: 125px;
+    margin: 0;
+}
+.page2>aside>nav>div>section{
+    width: 90px;
+    height: 100px;
+    margin: 10px 5px ;
+    background-color: white;
+    display: inline-block;
+    border-radius: 50%;
+}
+/*page3*/
