--- a/styles/main.css
+++ b/styles/main.css
@@ -201,3 +201,421 @@ nav{
     border-radius: 50%;
 }
 /*page3*/
+.page3{
+    width: 800px;
+    height: 980px;
+    margin: 40px;
+    background-color: darkgoldenrod;
+    padding-top: 20px;
+    padding-left: 20px;
+}
+.page3>aside{
+    width: 380px;
+    height: 305px;
+    margin: 0 16px 20px 0;
+    background-color: black;
+    display: inline-block;
+    vertical-align: top;
+}
+.page3>aside>div{
+    width: 340px;
+    height: 264px;
+    margin: 20px;
+    padding-top: 1px;
+    background-color: white;
+}
+.page3>aside>div>nav{
+    width: 300px;
+    height: 205px;
+    margin: 20px;
+    padding: 10px 0;
+    background-color: black;
+}
+.page3>aside>div>nav>article{
+    width: 300px;
+    height: 112.5px;
+    margin: 0;
+}
+.page3>aside>div>nav>article>section{
+    width: 90px;
+    height: 90px;
+    margin: 2.5px;
+    border-radius: 50%;
+    background-color: white;
+    display: inline-block;
+}
+.page3>aside>div>nav>div{
+    width: 100px;
+    height: 205px;
+    margin-left: -4px;
+    padding-top: 10px;
+    display: inline-block;
+}
+.page3>aside>div>nav>nav{
+    width: 100px;
+    height: 205px;
+    margin-left: -4px;
+    padding-top: 10px;
+    display: inline-block;
+}
+.page3>aside>div>nav>div>section{
+    width: 90px;
+    height: 90px;
+    margin-left: 10px; 
+    margin-bottom: 10px;
+    background-color: white;
+}
+.page3>aside>div>nav>nav>section{
+    width: 90px;
+    height: 90px;
+    margin-left: 5px;
+    margin-bottom: 10px;
+    border-radius: 50%;
+    background-color: white;
+}
+.page3>article{
+    width: 780px;
+    height: 304px;
+    padding-top: 1px;
+    margin: 0 20px 20px 0;
+    background-color: black;
+}
+.page3>article>div{
+    width: 720px;
+    height: 264px;
+    padding-left: 20px;
+    padding-top: 1px;
+    margin: 20px;
+    background-color: white;
+}
+.page3>article>div>aside{
+    width: 260px;
+    height: 225px;
+    margin: 20px 16px 20px 0;
+    background-color: black;
+    display: inline-block;
+    vertical-align: top;
+}
+.page3>article>div>article{
+    width: 230px;
+    height: 225px;
+    margin: 20px 16px 20px 0;
+    background-color: black;
+    display: inline-block;
+}
+.page3>article>div>div{
+    width: 170px;
+    height: 225px;
+    margin: 20px 16px 20px 0;
+    background-color: black;
+    display: inline-block;
+}
+.page3>article>div>aside>section{
+    width: 122px;
+    height: 205px;
+    margin: 10px -4px 10px 5px;
+    background-color: white;
+    display: inline-block;
+    border-radius: 50%;
+}
+.page3>article>div>article>section{
+    width: 205px;
+    height: 98px;
+    margin: 10px;
+    background-color: white;
+    border-radius: 50%;
+}
+.page3>article>div>div>section{
+    width: 85px;
+    height: 85px;
+    vertical-align: center;
+    margin: 20px auto;
+    background-color: white;
+    border-radius: 50%;
+}
+.page3>article>div>footer{
+    width: 700px;
+    height: 224px;
+    padding-top: 1px;
+    margin: 20px 20px 20px 0;
+    background-color: blue;
+}
+.page3>article>div>footer>nav{
+    width: 660px;
+    height: 184px;
+    padding-top: 1px;
+    margin: 20px;
+    background-color: black;
+}
+.page3>article>div>footer>nav>section{
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    background-color: white;
+    display: inline-block;
+    margin: 30px 2.5px;
+}
+/*page4*/
+.page4{
+    width: 780px;
+    height: fit-content;
+    padding-top: 1px;
+    background-color: darkgoldenrod;
+    padding-left: 20px;
+    margin: 40px;
+}
+.page4>nav{
+    width: 720px;
+    height: 200px;
+    margin: 20px 0;
+    display: inline-block;
+    vertical-align: top;
+    background-color: darkgoldenrod;
+}
+.page4>nav>article{
+    width: 124px;
+    height: 200px;
+    margin: 0 20px 0 -4px;
+    background-color: black;
+    display: inline-block;
+}
+.page4>nav>article>section{
+    width: 90px;
+    height: 90px;
+    background-color: white;
+    border-radius: 50%;
+    margin: 6px 15px;
+}
+.page4>nav>article>div{
+    width: 104px;
+    height: 180px;
+    margin: 10px;
+    background-color: white;
+    border-radius: 50%;
+}
+.page4>footer{
+    width: 40px;
+    height: 200px;
+    margin: 20px 20px 20px -4px;
+    background-color: black;
+    display: inline-block;
+}
+.page4>article{
+    width: 248px; 
+    height: 240px;
+    padding-left: 20px;
+    margin: 0 16px 20px 0;
+    background-color: blue;
+    display: inline-block;
+    vertical-align: top;
+}
+.page4>article>article{
+    width: 228px;
+    height: 59px;
+    margin: 20px 20px 20px 0;
+    padding-top: 1px;
+    background-color: black;
+}
+.page4>article>article>section{
+    width: 220px;
+    height: 52px;
+    margin: 4px;
+    border-radius: 50%;
+    background-color: white;
+}
+.page4>article>div{
+    width: 100px;
+    height: 120px;
+    margin: 0 20px 20px 0;
+    background-color: black;
+    display: inline-block;
+}
+.page4>article>div>div{
+    width: 90px;
+    height: 110px;
+    margin: 5px;
+    border-radius: 50%;
+    background-color: white;
+}
+.page4>article>div>section{
+    width: 50px;
+    height: 50px;
+    margin: 7px 25px;
+    background-color: white;
+    border-radius: 50%;
+}
+.page4>aside{
+    width: 472px;
+    height: 240px;
+    margin: 0 20px 20px 0;
+    background-color: black;
+    display: inline-block;
+}
+.page4>aside>aside{
+    width: 432px;
+    height: 199px;
+    padding-top: 1px;
+    margin: 20px;
+    background-color: white;
+}
+.page4>aside>aside>aside{
+    width: 372px;
+    height: 159px;
+    padding-top: 1px;
+    padding-left: 20px;
+    margin: 20px;
+    background-color: blue;
+}
+.page4>aside>aside>aside>div{
+    width: 104px;
+    height: 120px;
+    margin: 20px 16px 20px 0;
+    background-color: black;
+    display: inline-block;
+}
+.page4>aside>aside>aside>div>section{
+    width: 92px;
+    height: 108px;
+    margin: 6px;
+    background-color: white;
+    border-radius: 50%;
+}
+.page4>div{
+    width: 780px;
+    height: 220px;
+    margin: 0 0 20px 0;
+}
+.page4>div>article{
+    width: 240px;
+    height: 220px;
+    margin: 0 16px 0 0;
+    background-color: black;
+    display: inline-block;
+}
+.page4>div>article>div{
+    width: 200px;
+    height: 179px;
+    padding-top: 1px;
+    margin: 20px;
+    background-color: blue;
+}
+.page4>div>article>div>div{
+    width: 160px;
+    height: 70px;
+    margin: 15px 20px;
+    background-color: black;
+}
+.page4>div>article>div>nav{
+    width: 160px;
+    height: 70px;
+    margin: 10px 20px;
+    background-color: white;
+    border-radius: 50%;
+}
+.page4>div>article>div>section{
+    width: 170px;
+    height: 170px;
+    margin: 5px 15px;
+    background-color: white;
+    border-radius: 50%;
+}
+.page4>section{
+    width: 740px;
+    padding-left: 20px;
+    height: 160px;
+    margin: 0 20px 20px 0;
+    background-color: blue;
+}
+.page4>section>article{
+    width: fit-content;
+    height: 120px;
+    margin: 20px 16px 20px 0;
+    background-color: black;
+    display: inline-block;
+}
+.page4>section>article>section{
+    width: 110px;
+    height: 110px;
+    margin: 5px;
+    background-color: white;
+    border-radius: 50%;
+}
+.page4>section>aside{
+    width: fit-content;
+    height: 120px;
+    margin: 20px 20px 20px 0;
+    background-color: black;
+    display: inline-block;
+    vertical-align: top;
+}
+.page4>section>aside>section{
+    width: 150px;
+    height: 50px;
+    margin: 7px 5px;
+    background-color: white;
+    border-radius: 50%;
+}
+/*page5*/
+.page5{
+    width: 780px;
+    height: fit-content;
+    margin: 40px;
+    padding-top: 1px;
+    padding-left: 20px;
+    background-color: darkgoldenrod;
+}
+.page5>article{
+    width: 220px;
+    height: 529px;
+    padding: 1px 0 20px 20px;
+    margin: 20px 16px 20px 0;
+    background-color: blue;
+    display: inline-block;
+    vertical-align: top;
+}
+.page5>article>article{
+    width: 120px;
+    height: 100px;
+    margin: 20px 16px 0 0;
+    background-color: black;
+    display: inline-block;
+}
+.page5>article>article>
+.page5>article>div{
+    width: 60px;
+    height: 100px;
+    margin: 20px 20px 0 0;
+    background-color: black;
+    display: inline-block;
+}
+.page5>article>aside{
+    width: 200px;
+    height: 100px;
+    margin: 20px 20px 0 0;
+    background-color: black;
+}
+.page5>article>nav{
+    width: 200px;
+    height: 150px;
+    margin: 20px 20px 0 0;
+    background-color: black;
+    display: inline-block;
+}
+.page5>div{
+    width: 220px;
+    height: 529px;
+    padding: 1px 0 20px 20px;
+    margin: 20px 16px 20px 0;
+    background-color: blue;
+    display: inline-block;
+    vertical-align: top;
+}
+.page5>aside{
+    width: 220px;
+    height: 529px;
+    padding: 1px 0 20px 20px;
+    margin: 20px 16px 20px 0;
+    background-color: blue;
+    display: inline-block;
+    vertical-align: top;
+}
